FIXES on "Blogs", "LogIn", "SignIn" pages
On "Blogs" page I added styles for title, that appears if we have
no blogs. Also I changed "you" to "we" in title's text, since
on that page blogs of all users are showed.

On "LogIn","SignIn" pages I increased min-height of wrapper div,
since blogs of new size overflowed previous min-height.

--- a/src/pages/LogIn/style.module.scss
+++ b/src/pages/LogIn/style.module.scss
@@ -29,6 +29,9 @@
 }
 
 @media(min-width: 1200px) {
+    .wrapper {
+        min-height: 800px;
+    }
     .example-posts {
         display: block;
         position: absolute;
@@ -53,7 +56,6 @@
 @media (min-width: 1400px) {
     .wrapper {
         padding-top: 200px;
-        min-height: 750px;
     }
     .example-posts {
         article:first-child {
